force-app/main/default/objects/Job_Opening__c/Job_Opening__c.object-meta.xml
<CustomObject>
    <label>Job Opening</label>
    <nameField>
        <displayFormat>JOB-{0000}</displayFormat>
        <label>Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Openings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>