force-app/main/default/objects/Job_Opening__c/fields/Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Experience_Required__c</fullName>
    <label>Experience Required</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>