force-app/main/default/objects/Job_Opening__c/fields/Number_of_Openings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Openings__c</fullName>
    <label>Number of Openings</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>